﻿i-MSCP ChangeLog

------------------------------------------------------------------------------------------------------------------------
Git 1.5.x
------------------------------------------------------------------------------------------------------------------------

BACKEND
    Added: Support for .timer unit files (Systemd init provider)
    Fixed: Use of uninitialized value in bitwise or ( |) (PHP memory_limit, Subdomain module)
    Fixed: Make sure that units are not masked when enabling them (Systemd service provider)
    Fixed: Resolve units before acting on them due to https://github.com/systemd/systemd/issues/7875 (Systemd service provider)

CONFIG
    Added: Missing LOGROTATE(8) for SYSLOG-NG(8) which can be installed on some system in place of RSYSLOGD(8) (Fix backported from 1.6.x branch)
    Added: Specific LOGROTATE(8) configuration file for rsyslog (Ubuntu 14.04/Trusty Thar; Fix backported from 1.6.x branch)
    Fixed: Bad value for X-Forward-* headers (Proxy feature / Apache2 ssl vhosts; Fix backported from 1.6.x branch)
    Security: Protect both /var/www/virtual and /var/www/imscp directories from full access (Apache2)
    Review: SSL parameters for both Apache2 and Nginx Web servers (cipher suite)
    Review: Do not discard paths other than '/errors/' and '/.well-known/acme-challenge/' on redirect/proxy (Apache2)

CONTRIB
    Fixed: Possible duplicate DNS zone entry leading to server crash (Slave DNS server - 10_named_slave_provisioning.pl listener file)

DISTRIBUTION
    Added: Support for Ubuntu Bionic Beaver (18.04) LTS

FRONTEND
    Fixed: Closing button being removed in all dialog UI while it must be removed only in alert and confirmation dialogs

INSTALLER
    Fixed: 'CLIENT_DOMAIN_ALT_URLS' configuration parameter reseted to 0 (disabled) while running installer (Fix backported from 1.6.x branch)
    Fixed: 'CLIENT_DOMAIN_ALT_URLS' parameter is not set on fresh installations (Fix backported from 1.6.x branch)