@@ -6,6 +6,7 @@ Git 1.5.x
 
 BACKEND
     Added: Support for .timer unit files (Systemd init provider)
+    Added: Distribution packages manager (backported from 1.6.x branch)
     Fixed: Use of uninitialized value in bitwise or ( |) (PHP memory_limit, Subdomain module)
     Fixed: Make sure that units are not masked when enabling them (Systemd service provider)
     Fixed: Resolve units before acting on them due to https://github.com/systemd/systemd/issues/7875 (Systemd service provider)
@@ -23,6 +24,7 @@ CONTRIB
 
 DISTRIBUTION
     Added: Support for Ubuntu Bionic Beaver (18.04) LTS
+
 
 FRONTEND
     Fixed: Closing button being removed in all dialog UI while it must be removed only in alert and confirmation dialogs
